[x] [MOBILE] fix image overlapping in list and gallery view of result set

--- a/application/cars.schmolck.de/template/2013.06/styles.layout.less
+++ b/application/cars.schmolck.de/template/2013.06/styles.layout.less
@@ -640,6 +640,7 @@
 					width: 115px;
 					height: 86px;
 				}
+				overflow: hidden;
 			}
 		}
 		&.result {
@@ -699,6 +700,7 @@
 				width: 150px;
 				height: 113px;
 				padding-right: 20px;
+				overflow: hidden;
 			}
 			.infos1 {
 				@media handheld, only screen and (max-width: 320px) {
